Adjust item endpoint
